# pico-backend

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  README.md  alembic.ini  docker-compose-test-ci.yml  docker-compose-test.yml  docker-compose.yml  logging.ini  pyproject.toml  pytest.ini
alembic/: env.py  script.py.mako
alembic/versions/: 2025_04_01_0924-b542b656c9dd_initial.py  2025_04_12_0117-197aeaf6b3e1_initial.py  2025_05_23_0920-7f5b323a78cc_initial.py  2025_05_26_1951-26a31b8bb795_stuff.py  2025_05_27_0632-52db58e0a015_update_education_level_enum.py  2025_05_27_0658-dae8b1a51cbf_update_flowelement_constraint.py  2025_05_27_1038-c78668fc2756_update_flowquestionuser_constraint.py  2025_06_03_1533-43d5d53cdf08_initial.py  2025_06_07_1445-11f22c234e67_morestuff.py  2025_06_11_1651-283b2bc70b03_initial.py  2025_06_12_1103-835e3554f78b_user_country_not_required.py  2025_06_13_0810-25e6ace28f32_pgroonga.py  2025_06_13_1637-f768ee9f2fae_changing_name_field.py  2025_06_13_1732-f75786c398b3_changing_online_info.py  2025_06_15_1716-8564a87eca44_cannot_set_null_for_level_id_on_.py  2025_06_17_0844-191b025420bb_country_code_to_country_id_on_foreign_.py  2025_06_17_2051-3febdc1b3823_add_has_quantitative_questions_to_flow_.py  2025_06_19_2323-e03714ef4af3_size_optionl_on_file.py  2025_06_26_1122-7fc8e44920e7_using_clock_timestamp_so_that_row_gets_.py  2025_07_08_0740-4db3ea22798e_is_ready_on_flow.py  2025_07_18_1643-0c9931af6475_flow_feed_scoring.py  2025_07_21_2049-b4fe22735709_change_file_url_to_image_id_in_content_.py  2025_07_24_2056-43e2d2faeca3_is_privileged.py  2025_07_25_0946-5871b5984517_is_privileged.py  2025_07_29_2038-0848784862f8_flow_feed_score.py  2025_08_22_2328-3d65ae6bdf2b_cascade_flow_user_delete.py  2025_08_23_2232-1816ace8ae2f_cascade_question_of_user.py  2025_08_25_1200-a1b2c3d4e5f6_add_full_name_to_institution.py  2025_08_25_1510-969f75920087_instagram_account.py  2025_08_25_1600-a1b2c3d4e5f6_add_full_name_to_institution.py
app/: .env  Dockerfile  Dockerfile.app  Dockerfile.worker  Pipfile  README  admin_registry.py  alembic.ini  amp.py  arq_check.py  arq_client.py  arq_worker.py  base.py  config.py  database.py  deps.py  docker-entrypoint.sh  fcm_service.py  firebase_config.py  instrumentation.py  localization.py  log_filters.py  logging.ini  logging_admin.py  logging_config.py  mail.py  main.py  migration_state.py  notifications.py  old_models.py  pagination.py  pyproject.toml  pytest.ini  redis_client.py  timezone.py
app/alembic/: env.py
app/chat/: models.py  notifications.py  schemas.py  service.py  websockets.py
app/chatrooms/: api.py  chatroom_service.py  models.py  schemas.py
app/community/: admin.py  models.py  routers.py  schemas.py  service.py
app/countries/: admin.py  countries.sql  models.py
app/currency/: currency_service.py  decorators.py  models.py
app/deeplinks/: assetlinks.json
app/education/: admin.py  models.py  routers.py  schemas.py  scripts.py  service.py  tasks.py
app/essays/: admin.py  constants.py  models.py  routers.py  schemas.py  service.py  tasks.py
app/fcm/: admin.py  fcm_service.py  models.py  routers.py  schemas.py
app/files/: admin.py  models.py  routers.py  service.py  storage.py  utils.py
app/flows/: admin.py  area_service.py  campaign_service.py  constants.py  db_types.py  exam_service.py  flow_feed.py  flow_service.py  models.py  old_models_sqlalchemy.py  prompts.py  question_service.py  question_utils.py  quiz_service.py  routers.py  schemas.py  session_service.py  tasks.py  utils.py
app/in_app_notifications/: admin.py  models.py  routers.py  schemas.py  service.py
app/notifications/: admin.py  models.py  routers.py  service.py
app/quiz/: admin.py  constants.py  models.py  quiz_service.py  session_service.py  stats_service.py  tasks.py  utils.py
app/schools/: admin.py  models.py  routers.py  schemas.py  service.py
app/shared/: admin.py  ai_utils.py  bootstrap_sqladmin.py  code_generation.py  constants.py  gemini_utils.py  openai_service.py  openai_utils.py  text_extraction.py  validation.py
app/tests/: conftest.py  db_utils.py  factories.py  test_auth.py  test_chatrooms.py  test_code_generation.py  test_email.py  test_factories.py  test_quiz.py  test_schools.py  test_users.py
app/tournaments/: models.py
app/users/: admin.py  api.py  constants.py  create_superuser.py  exceptions.py  external_auth.py  jwt_token.py  models.py  routers.py  schemas.py  service.py  social.py  token.py  user_service.py  utils.py
app/ws/: admin.py  models.py  notifications.py  routers.py  service.py
docker/: Dockerfile  Dockerfile.app  Dockerfile.postgres  Dockerfile.worker  docker-celery-entrypoint.sh  docker-celery-flower-entrypoint.sh  docker-entrypoint.sh  docker-fastapi-entrypoint.sh  docker-test-entrypoint.sh  docker-test-fastapi-entrypoint.sh  docker-worker-entrypoint.sh
pico-backend/: .gitlab-ci.yml  LICENSE  docker-compose-test.yml
pico-backend-fastapi/: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  docker-compose-test-ci.yml  docker-compose-test.yml  docker-compose.yml  pyproject.toml  pytest.ini
pico-backend-fastapi/alembic/: env.py
pico-backend-fastapi/app/: admin_registry.py  amp.py  arq_check.py  arq_client.py  arq_worker.py  base.py  config.py  database.py  instrumentation.py  logging_config.py  main.py  migration_state.py  pagination.py  redis_client.py  serve.py  timezone.py
pico-backend-fastapi/docker/: .dockerignore  Dockerfile  docker-entrypoint.sh
pico-backend-fastapi/templates/: base.html  logging_control.html  (+2 more)
pico_backend/: docker-entrypoint.sh  docker-test-entrypoint.sh  manage.py
pico_django/: manage.py
templates/: logging_control.html  password_reset.html
tests/: conftest.py  db_utils.py  factories.py  test_auth.py  test_code_generation.py  test_communities.py  test_education.py  test_email.py  test_factories.py  test_files.py  test_flow_feed.py  test_flows.py  test_in_app_notifications.py  test_notifications.py  test_quiz.py  test_schools.py  test_user_service.py  test_users.py  test_websockets.py
(+518 files in other folders)
