[project]
name = "pico-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Luiz Felipe Neves",email = "luizfneves@proton.me"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "sqlalchemy-utils (>=0.41.2,<0.42.0)",
    "pydantic-extra-types (>=2.10.2,<3.0.0)",
    "boto3 (>=1.37.3,<2.0.0)",
    "pydantic[email] (>=2.10.6,<3.0.0)",
    "phonenumbers (>=8.13.55,<9.0.0)", # Needed for pydantic phone numbers
    "redis[hiredis] (<6.0.0)",
    "arq (>=0.26.3,<0.27.0)",
    "python-multipart (>=0.0.20,<0.0.21)", # Needed for FastAPI request files
    "sqladmin[full] (>=0.20.1,<0.21.0)",
    "openai (>=1.68.2,<2.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "pylatexenc (>=2.10,<3.0)",
    "amplitude-analytics (>=1.1.5,<2.0.0)",    
    "firebase-admin (>=6.7.0,<7.0.0)",
    "python-magic (>=0.4.27,<0.5.0)",
    "fastapi[standard] (>=0.115.10,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "amazon-textract-textractor (>=1.9.1,<2.0.0)",
    "django (>=5.2,<6.0)",
    "celery[redis] (>=5.5.2,<6.0.0)",
    "channels (==4.1.0)",
    "channels-redis (>=4.2.1,<5.0.0)",
    "django-storages[s3] (==1.14.3)",
    "pgvector (>=0.4.1,<0.5.0)",
    "semchunk (>=3.2.1,<4.0.0)",
    "pymupdf (>=1.25.5,<2.0.0)",
    "reportlab (>=4.4.0,<5.0.0)",
    "babel (>=2.17.0,<3.0.0)",
    "flower (>=2.0.1,<3.0.0)",
    "psycopg[binary,pool] (>=3.2.7,<4.0.0)",
    "django-import-export (>=4.3.7,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "django-ninja (>=1.4.1,<2.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "python-docx (>=1.1.2,<2.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "google-genai (>=1.13.0,<2.0.0)",
    "django-extensions (>=4.1,<5.0)",
    "django-debug-toolbar (>=5.2.0,<6.0.0)",
    "coverage (>=7.8.0,<8.0.0)",
    "pydeps (>=3.0.1,<4.0.0)",
    "decouple (>=0.0.7,<0.0.8)",
    "django-redis (>=5.4.0,<6.0.0)",
    "fcm-django (>=2.2.1,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-xdist = "^3.6.1"
httpx = ">=0.28.1,<0.29.0"
factory-boy = ">=3.3.3,<4.0.0"

[tool.poetry.group.dev.dependencies]
sqlacodegen = {extras = ["pgvector"], version = "^3.0.0"}
types-boto3 = {extras = ["essential"], version = "^1.37.28"}
